0.11
- moved some inlie css to external files

0.10
- moved some locale files, now ru_RU.CP121 and ru_RU.KOI8-R work again
- bugfix in getAsFile method in P4A_FIELD
- bugfix in saveRow method in P4A_DB_SOURCE
- bugfix in getAsDate method in P4A_FIELD
- null value bugfix in saveRow method on P4A_DB_SOURCE
- improved check_configuration library

0.9
- all javascript moved in p4a.js, the default form is now named "p4a"
- fixed a bug in mask default template, no javascript was included
- added the ability to detect handheld devices (a browser that does not support css2 is considered handheld)
- new library (phpSniff) to detect Internet Explorer
- optimized output HTML, cleaner and lighter

0.8
- changed P4A_MESSAGE layout
- fixed fieldset ie bug
- fixed deleteRow method on P4A_DATA_SOURCE
- fixed screen.css in default theme
- fixed anchorCenter bug in P4A_FRAME
- fixed anchorCenter bug in P4A_FIELDSET
- fixed an error P4A_FIELD::setNewValue that prevented the system from handling 0 as numeric value

0.7
- code cleanup
- added P4A_Navigation_Toolbar, a new default toolbar with "first", "prev", "next", "last", "exit" buttons
- updated TODO
- various bugfixes

0.6
- renamed changelog to CHANGELOG
- added TODO file
- added setlocale(LC_NUMERIC, "C") to avoid php 4.3.10 problems with numeric locales
- added setlocale(LC_MONETARY, "C") to avoid php 4.3.10 problems with numeric locales
- fixed P4A_TOOLBAR, now spacers work correctly
- fixed P4A_IMAGE, now supports the new default icon path
- added spacer.png image into icons
- DATA_SOURCE::getAsCSV() now suports fields names
- renamed DATA_SOURCE::exportToCSV() to DATA_SOURCE::exportAsCSV()
- added DATA_SOURCE::exportToCSV() as an alias of DATA_SOURCE::exportAsCSV()

0.5
- fixed a file upload bug that prevented a correct behaviour when the web server is listening on a port differt from 80
- fixed a bug in DATA_SOURCE filters engine
- added a message to MySQL Manager to suggest using Firefox